Fixed Nav on small viewport. Added initial tabs for Evolution MAterials

--- a/styles.css
+++ b/styles.css
@@ -18,3 +18,8 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
+
+.evoThumb{
+    max-width: 50px;
+    height: auto;
+}
